# CICD_LLM_DATA_SCRAPER

./: .cicdllm.yaml  .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  INSTALLATION_GUIDE.md  LICENSE  README.md  SECURITY.md  TODO.md  analysis.txt  cicdllm.yaml  demo_dynamic_timeout.py  demo_tokenization.py  export_data.py  main.py  optimizations.md  plan_to_implement_optimizations.txt  pyproject.toml  repos.txt  requirements-dev.txt  requirements.txt  test_config_injection.py  update_config_refs.py
prompts/: README.md
prompts/MagicMock/mock.model.pipeline.prompt_theme/4575855344/: question_system.txt
prompts/MagicMock/mock.model.pipeline.prompt_theme/4577247984/: question_user.txt
prompts/MagicMock/mock.model.pipeline.prompt_theme/4581188880/: answer_system.txt
prompts/MagicMock/mock.model.pipeline.prompt_theme/4610154448/: answer_user.txt
prompts/devops/: answer_system.txt  answer_user.txt  question_system.txt  question_user.txt
prompts/template/: README.md  answer_system.txt  answer_user.txt  question_system.txt  question_user.txt
src/: cli.py  config.py  data_pipeline.py  db_manager.py  exporters.py  file_manager.py  llm_client.py  log_manager.py  logging_config.py  mlx_client.py  mlx_manager.py  pipeline_factory.py  protocols.py  state_manager.py  training_data_repository.py  utils.py
src/core/: config.py  config_loader.py  config_models.py  config_utils.py  error_handling.py  log_manager.py  logging_config.py  protocols.py  tokenizer_cache.py  utils.py
src/data/: db_manager.py  file_manager.py  optimized_db_manager.py  state_manager.py  training_data_repository.py
src/llm/: llm_client.py  mlx_client.py  mlx_manager.py  mlx_utils.py  prompt_utils.py
src/llm/mlx/: model_manager.py  prompt_formatter.py
src/pipeline/: batch_processing_service.py  cli.py  di_container.py  export_service.py  exporters.py  file_processing_service.py  orchestration_service.py  preflight.py  preparation_service.py  quickstart.py  realtime_status.py  repository_service.py  retry_service.py  scraping_service.py  state_management_service.py
src/services/: __init__.py  batch_processing_service.py  file_processing_service.py  repository_service.py  state_management_service.py
src/ui/: enhanced_progress.py  pipeline_tui.py  pipeline_tui.tcss  progress_tracker.py  system_monitor.py  tui_widgets.py
src/ui/screens/: command_palette.py  config_screen.py  failed_files_screen.py
src/utils/: disk_cleanup.py  memory_manager.py  patches.py  reset_utils.py  status_utils.py
tests/: __init__.py  conftest.py  test_batch_processing_service.py  test_cli.py  test_config.py  test_config_loader.py  test_config_models.py  test_config_screen_interactions.py  test_config_utils.py  test_data_pipeline.py  test_db_manager.py  test_di_container.py  test_disk_cleanup.py  test_dynamic_timeout.py  test_dynamic_timeout_integration.py  test_enhanced_progress.py  test_error_handling.py  test_exporters.py  test_file_manager.py  test_file_processing_service.py  test_file_processing_service_full.py  test_llm_client.py  test_log_manager.py  test_logging_config.py  test_memory_manager.py  test_mlx_client.py  test_mlx_manager.py  test_mlx_performance.py  test_optimized_db_manager.py  test_pipeline_factory.py  test_pipeline_tui.py  test_pipeline_tui_app.py  test_preflight.py  test_preparation_service.py  test_progress_tracker.py  test_quickstart.py  test_quickstart_extended.py  test_realtime_status.py  test_regressions.py  test_repository_service.py  (+12 more)
